--- a/task5.html
+++ b/task5.html
@@ -19,19 +19,19 @@
     <script type="text/babel">
       const rootElement = document.querySelector("#root");
 
-      function ListItem(props) {
-        // your code from task 4
+      function ListItem({ text }) {
+        return <li>{text}</li>;
       }
 
-      function List(props) {
-        // render the children in a ul
+      function List({ children }) {
+        return <ul>{children}</ul>;
       }
 
       ReactDOM.render(
         <List>
-          <ListItem text="Milk" />,
-          <ListItem text="Milk" />,
-          <ListItem text="Flour" />,
+          <ListItem text="Milk" />
+          <ListItem text="Milk" />
+          <ListItem text="Flour" />
         </List>,
         rootElement
       );
